New branch Game. create game router and support functions.
